Generate a lockfile for Yarn and update Travis to use Yarn
Add  a yarn lockfile for Travis.

Add yarn check --integrity to keep 'package.json' and 'yarn.lock' in
sync

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: node_js
 node_js:
  - "4.4.7"
-before_install:
-- npm install -g grunt-cli
+script:
+# Ensures `package.json` and `yarn.lock` stay in sync
+- yarn check --integrity
+- yarn test
 notifications:
   email: false
 before_deploy:
