--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
 - ls -al ~/.ssh
 - head -1 ~/.ssh/id_rsa
 - tail -1 ~/.ssh/id_rsa
+- ssh git@github.com
 -  # This openssl command was generated automatically by `travis encrypt-file`, see `.travis/README.md` for more details
 install:
 - npm install
