--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,9 @@ before_install:
 - ls -al ~/.ssh
 - head -1 ~/.ssh/id_rsa
 - tail -1 ~/.ssh/id_rsa
-- ssh git@github.com
+- ssh git@github.com || true
+- git tag travis-test
+- git push origin_ssh travis-test
 -  # This openssl command was generated automatically by `travis encrypt-file`, see `.travis/README.md` for more details
 install:
 - npm install
