--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,17 @@
 language: node_js
 node_js:
- - "4.4.7"
+- "4.4.7"
 sudo: false
 before_install:
 - npm install -g grunt-cli
 - git config --global user.name "Travis CI"
 - git config --global user.email "travis@travis-ci.org"
 - git remote add origin_ssh git@github.com:alphagov/govuk_elements.git
-- openssl aes-256-cbc -K $encrypted_85ebe8034b89_key -iv $encrypted_85ebe8034b89_iv -in .travis/govuk_elements.enc -out ~/.ssh/id_rsa -d && chmod 600 ~/.ssh/id_rsa
+- openssl aes-256-cbc -K $encrypted_85ebe8034b89_key -iv $encrypted_85ebe8034b89_iv -in .travis/govuk_elements.enc -out ~/.ssh/id_rsa -d && chmod 600 ~/.ssh/id_rsa # This openssl command was generated automatically by `travis encrypt-file`, see `.travis/README.md` for more details
 - ls -al ~/.ssh
 - head -1 ~/.ssh/id_rsa
 - tail -1 ~/.ssh/id_rsa
 - ssh git@github.com || true
--  # This openssl command was generated automatically by `travis encrypt-file`, see `.travis/README.md` for more details
 install:
 - npm install
 script:
@@ -22,20 +21,34 @@ notifications:
 before_deploy:
 - test $TRAVIS_TEST_RESULT = 0
 deploy:
-- provider: npm
+- provider: heroku    # Deploy master to a Heroku - review app
   api_key:
-    secure: VAHPK3W0YVWqx03j659FbKjvEwd+UIDfb1x55to9u+PzyVqQp1CXalsYuKQSavxqInaV3gzNJpbANo6SIXlpAUxZPChiTk0rJwUhz7u1fRY0Lshb+aDOMnXSfjSqiIGThNRpjYdxBiJsnrYP1T6unHuo2A1K8mXjwdFtxhadh+w=
-  email: govuk-dev@digital.cabinet-office.gov.uk
+    secure: nQCOBk2EnuJ0yaC0cO2RabfLlF+3WiZ4MrLLBPt3l+fNQO69KcJZu59Npbt45f/ip6Dv8cEGxdzSqzNsPu/XB+fmyAZd1bml0u7JMKWNQeVLKddoM+A1ETFSyXHoM/Ra3Qw8+2XS/ZJNTAD7BGibSh8SvzYdg9fy9kCN77Sn9Ro=
+  app: govuk-elements-review
+  on: master
+- provider: heroku    # Deploy master to Heroku - production
+  api_key:
+    secure: nQCOBk2EnuJ0yaC0cO2RabfLlF+3WiZ4MrLLBPt3l+fNQO69KcJZu59Npbt45f/ip6Dv8cEGxdzSqzNsPu/XB+fmyAZd1bml0u7JMKWNQeVLKddoM+A1ETFSyXHoM/Ra3Qw8+2XS/ZJNTAD7BGibSh8SvzYdg9fy9kCN77Sn9Ro=
+  app: govuk-elements
+  on: master
+- provider: script    # If the version file has changed, push the tag to Github
+  script: './push-version-tag.sh'
+- provider: script     # Update the latest-release branch
+  script: './update-release-branch.sh'
   on:
     tags: true
     all_branches: true
-after_deploy:
-- provider: script
-  script: './push-version-tag.sh'
+- provider: heroku    # Update Heroku release app
+  api_key:
+    secure: nQCOBk2EnuJ0yaC0cO2RabfLlF+3WiZ4MrLLBPt3l+fNQO69KcJZu59Npbt45f/ip6Dv8cEGxdzSqzNsPu/XB+fmyAZd1bml0u7JMKWNQeVLKddoM+A1ETFSyXHoM/Ra3Qw8+2XS/ZJNTAD7BGibSh8SvzYdg9fy9kCN77Sn9Ro=
+  app: govuk-elements-sass-release
   on:
+    tags: true
     all_branches: true
-- provider: script
-  script: "./update-release-branch.sh"
+- provider: npm       # Update govuk-elements-sass package on NPM
+  api_key:
+    secure: VAHPK3W0YVWqx03j659FbKjvEwd+UIDfb1x55to9u+PzyVqQp1CXalsYuKQSavxqInaV3gzNJpbANo6SIXlpAUxZPChiTk0rJwUhz7u1fRY0Lshb+aDOMnXSfjSqiIGThNRpjYdxBiJsnrYP1T6unHuo2A1K8mXjwdFtxhadh+w=
+  email: govuk-dev@digital.cabinet-office.gov.uk
   on:
     tags: true
     all_branches: true
